--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "@stripe/stripe-js": "^3.3.0",
     "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.3",
     "daisyui": "^4.10.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
