--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "sass": "^1.77.8",
+    "tailwindcss": "^3.4.10",
     "typescript": "~5.1.3"
   }
 }
