--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@stripe/stripe-js": "^3.3.0",
+    "autoprefixer": "^10.4.20",
     "boostrap": "^2.0.0",
     "daisyui": "^4.10.3",
+    "postcss": "^8.4.41",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
